# herd_outer_optimizer

./: LiGAPSBeef20180301_herd_sync.py  README.md  RUNNING.md  pyproject.toml
assets/: FRACHA19982012.csv  LiGAPSBeef20180301_herd_worked.py
herd_optimizer/: __init__.py  botorch_loop.py  cli.py  climate.py  ligaps_sync.py  objectives.py  reporting.py  schemas.py  workflow.py
runs/france_case1/: operation_day_180.json  optimization_archive.csv  optimization_archive.json
tests/: test_climate.py  test_operation_random_future.py  test_reporting.py  test_sync_source_patch.py  test_workflow_case_scaling.py
